--- a/lab3/index.html
+++ b/lab3/index.html
@@ -9,9 +9,20 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>2048</h1>
-        </header>
+		<header>
+			<h1>2048</h1>
+			<div class="scores">
+				<div class="score-container">
+					<div class="score-label">Счет</div>
+					<div class="score-value" id="score">0</div>
+				</div>
+				<div class="score-container">
+					<div class="score-label">Лучший</div>
+					<div class="score-value" id="bestScore">0</div>
+				</div>
+			</div>
+		</header>
+
     </div>
     <script src="script.js"></script>
 </body>
