--- a/lab3/index.html
+++ b/lab3/index.html
@@ -23,6 +23,13 @@
 			</div>
 		</header>
 
+		<div class="controls">
+			<button class="btn" id="newGameBtn">Новая игра</button>
+			<button class="btn" id="undoBtn">Отменить ход</button>
+			<button class="btn" id="leaderboardBtn">Таблица лидеров</button>
+		</div>
+
+
     </div>
     <script src="script.js"></script>
 </body>
