поле игры и ячейки

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -29,7 +29,9 @@
 			<button class="btn" id="leaderboardBtn">Таблица лидеров</button>
 		</div>
 
+		<div id="gameBoard" class="game-board"></div>
 
+		
     </div>
     <script src="script.js"></script>
 </body>
