--- a/lab3/index.html
+++ b/lab3/index.html
@@ -42,7 +42,24 @@
 		</div>
 	</div>
 
-		
+	<div id="leaderboardModal" class="modal">
+		<div class="modal-content">
+			<h2>Таблица лидеров</h2>
+			<table id="leaderboardTable">
+				<thead>
+					<tr>
+						<th>Место</th>
+						<th>Имя</th>
+						<th>Счет</th>
+						<th>Дата</th>
+					</tr>
+				</thead>
+				<tbody id="leaderboardBody"></tbody>
+			</table>
+			<button class="btn" id="closeLeaderboardBtn">Закрыть</button>
+		</div>
+	</div>
+			
     </div>
     <script src="script.js"></script>
 </body>
