--- a/lab3/index.html
+++ b/lab3/index.html
@@ -31,6 +31,16 @@
 
 		<div id="gameBoard" class="game-board"></div>
 
+		<div id="mobileControls" class="mobile-controls">
+			<button class="direction-btn up-btn" data-direction="up">↑</button>
+			<div class="horizontal-controls">
+				<button class="direction-btn left-btn" data-direction="left">←</button>
+				<button class="direction-btn down-btn" data-direction="down">↓</button>
+				<button class="direction-btn right-btn" data-direction="right">→</button>
+			</div>
+		</div>
+
+
 	<div id="gameOverModal" class="modal">
 		<div class="modal-content">
 			<h2>Игра окончена!</h2>
